5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1330.log
== TEST (2019-03-28 11:16:22) 
-- CODE:
var1 = 250 / 6
print(var1)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:17:25) 
-- CODE:
var1 = 250 / 6
print(var1, round 250 / 6, 4)
-- ERROR:
File "XXXX", line 2
    print(var1, round 250 / 6, 4)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:03) 
-- CODE:
var1 = 250 / 6
print(var1, round 2, 2)
-- ERROR:
File "XXXX", line 2
    print(var1, round 2, 2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:20) 
-- CODE:
var1 = 250 / 6
print(round, var1, 2)
-- OUTPUT:
<built-in function round> 41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:26) 
-- CODE:
var1 = 250 / 6
print(round var1, 2)
-- ERROR:
File "XXXX", line 2
    print(round var1, 2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:30) 
-- CODE:
var1 = 250 / 6
print(round, var1, 2)
-- OUTPUT:
<built-in function round> 41.666666666666664 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:35) 
-- CODE:
var1 = 250 / 6
print(round, var1 2)
-- ERROR:
File "XXXX", line 2
    print(round, var1 2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:18:38) 
-- CODE:
var1 = 250 / 6
print(round, var1)
-- OUTPUT:
<built-in function round> 41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:00) 
-- CODE:
var1 = 250 / 6
print(var1)
print(Round "var1:", 2)
-- ERROR:
File "XXXX", line 3
    print(Round "var1:", 2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:03) 
-- CODE:
var1 = 250 / 6
print(var1)
print(Round "var1:" 2)
-- ERROR:
File "XXXX", line 3
    print(Round "var1:" 2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:14) 
-- CODE:
var1 = 250 / 6
print(var1)
print(Round 41,6666 2)
-- ERROR:
File "XXXX", line 3
    print(Round 41,6666 2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:20:15) 
-- CODE:
var1 = 250 / 6
print(var1)
print(Round 41,6666, 2)
-- ERROR:
File "XXXX", line 3
    print(Round 41,6666, 2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:22:53) 
-- CODE:
var1 = 250 / 6
print(round(var1, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:22:56) 
-- CODE:
var1 = 250 / 6
print(round(var1, 2))
-- EXECUTION TIME:
0.171717
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:13:42) 
-- CODE:
var1 = 250 / 6
print(round(var1, 2))
-- EXECUTION TIME:
0.118264
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:58:57) 
-- CODE:
# Variavel
Amigos = 6
Conta = 250
# Variavel de divis達o
divisao = conta / amigos
# Saida arredondada
print(round(divisao, 2))
-- EXECUTION TIME:
0.172816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1330/main.py", line 5, in <module>
    divisao = conta / amigos
NameError: name 'conta' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:58:59) 
-- CODE:
# Variavel
Amigos = 6
Conta = 250
# Variavel de divis達o
divisao = conta / amigos
# Saida arredondada
print(round(divisao, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    divisao = conta / amigos
NameError: name 'conta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:59:08) 
-- CODE:
# Variavel
amigos = 6
conta = 250
# Variavel de divis達o
divisao = conta / amigos
# Saida arredondada
print(round(divisao, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:59:10) 
-- CODE:
# Variavel
amigos = 6
conta = 250
# Variavel de divis達o
divisao = conta / amigos
# Saida arredondada
print(round(divisao, 2))
-- EXECUTION TIME:
0.201092
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
